fix: Valkey en productos y corrección de App.tsx